test/sematest/valid/basic_arithmetic.java
class A {
  public static void main(String[] args) {
    int b = 4;
    int a = 4 * 5 + 5 * b % 4;
  }
}