test/sematest/invalid/basic_arithmetic4.java
class A {
  public static void main(String[] args) {
    int b = 4;
    int a = 4 * (new int[1]) + 5 * b % 4;
  }
}